--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECTION_STRING=mongodb+srv://pAccounts:3SBFYgYXV2CHgtp5@cluster0.vp8crsv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_CONNECTION_STRING=mongodb+srv://pAccounts:3SBFYgYXV2CHgtp5@cluster0.vp8crsv.mongodb.net/educonnect?retryWrites=true&w=majority&appName=Cluster0
