--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "stripe": "^16.10.0",
     "tailwind-merge": "^2.5.2",
